# Uni-2017-2020

ASM_minilibc_2018/: .gdb_history  Makefile
B1Lettre/: B1-P2-Lettre-leo.smith-Paris.docx
B1Mailpro/: B1-MP1-mail-pro-leo.smith-Paris.doc
B2PRECISER/: B2-P2-Faire-preciser-leo.smith-Paris.odt
B2VENTE/: B2-P3-Lettre-vente-leo.smith@epitech.eu-Paris.docx
CPE_BSQ_2017/: Makefile
CPE_corewar_2017/: Makefile  op.c
CPE_duostumper_1_2017/: Makefile
CPE_duostumper_2_2017/: Makefile
CPE_duostumper_3_2017/: Makefile
CPE_getnextline_2017/: .gitignore  get_next_line.c
CPE_matchstick_2017/: Makefile
CPE_n4s_2017/: Makefile
CPE_pushswap_2017/: .gitignore  Makefile
CPE_pushswap_bootstrap_2017/: Makefile  swap_elem.c
CPE_solostumper_1_2017/: Makefile
CPP_babel_2019/: CMakeCache.txt  CMakeLists.txt  README.md  add_host.sh  build.sh  conanfile.txt
CPP_babel_2019/doc/: client.md  portAudio.md  server.md
CPP_babel_2019/include/: IUdp.hpp  babel.hpp
CPP_babel_2019/include/audio/: Aaudio.hpp  IAudio.hpp  ICompressor.hpp  Opus.hpp  Play.hpp  Record.hpp  audio.hpp  paTestData.hpp
CPP_babel_2019/include/client/: Client.hpp  ClientRoom.hpp  Udp.hpp  sockettest.hpp
CPP_babel_2019/include/server/: ISession.hpp  Room.hpp  Server.hpp
CPP_babel_2019/src/: main.cpp
CPP_babel_2019/src/audio/: Opus.cpp  Play.cpp  Record.cpp  audio.cpp  main.cpp  test_audio.cpp
CPP_babel_2019/src/client/: Client.cpp  SocketTest.pro  Udp.cpp  client.cpp  main.cpp  sockettest.cpp
CPP_babel_2019/src/server/: Room.cpp  Server.cpp  Session.cpp  main.cpp
CPP_babel_2019/test/: CMakeLists.txt  client.cpp  server.cpp  server.cpp~
CPP_rtype_2019/: CMakeLists.txt  Makefile  compile.sh  conanfile.txt
CPP_rtype_2019/include/: protocol.hpp
CPP_rtype_2019/include/Exception/: Exception.hpp
CPP_rtype_2019/include/client/: Client.hpp  Menu.hpp  Network.hpp  ObjectContainer.hpp  SFML.hpp  Screen.hpp
CPP_rtype_2019/include/server/: Engine.hpp  UdpServer.hpp  server.hpp
CPP_rtype_2019/src/: protocol.cpp
CPP_rtype_2019/src/client/: .gdb_history  Client.cpp  Menu.cpp  Network.cpp  SFML.cpp  a.out  main.cpp
CPP_rtype_2019/src/server/: Engine.cpp  UdpServer.cpp  main.cpp  server.cpp
CPool_Day02_2017/: count_files.sh  find_sh.sh  gotta_catch_them_all.sh  how_many_are_we.sh  looneytised.sh  r_tacpy.sh  skip.sh
CPool_Day03_2017/: .gitignore  my_put_nbr.c
CPool_Day04_2017/: .gitignore  my_getnbr.c
CPool_Day05_2017/: .gitignore  count_valid_queens_placements.c
CPool_Day06_2017/: .gitignore  my_getnbr_base.c  my_putnbr_base.c  my_revstr.c  my_showmem.c  my_showstr.c  my_str_isalpha.c  my_str_islower.c  my_str_isnum.c  my_str_isprintable.c  my_str_isupper.c  my_strcapitalize.c  my_strcpy.c  my_strncmp.c  my_strncpy.c  my_strstr.c
CPool_Day07_2017/: .gitignore  my_strcat.c  my_strncat.c
CPool_Day08_2017/: .gitignore  concat_params.c  convert_base.c  my_show_word_array.c  my_str_to_word_array.c  my_strdup.c
CPool_Day09_2017/: .gitignore  get_color.c  my_params_to_array.c  my_show_param_array.c  swap_endian_color.c
CPool_Day10_2017/: .gitignore  (+2 more)
(+1211 files in other folders)
